--- a/src/app/application-form/application-form.component.scss
+++ b/src/app/application-form/application-form.component.scss
@@ -1,3 +1,4 @@
+
 form {
     padding-top: 20px;
     width: 70vw;
@@ -12,7 +13,7 @@ form {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    margin:15px;
+    margin: 15px;
 }
 
 .row {
@@ -22,7 +23,7 @@ form {
 
 
 h1 {
-    background-color: rgb(102, 114, 125);
+    background-color: var(--accent);
     color: white;
-    padding:7px;
+    padding: 7px;
 }
