--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary">
 
 
+  <button mat-button [routerLink]="['login']">Zaloguj</button>
   <button mat-button [routerLink]="['applications','list']">Lista zgłoszeń</button>
   <button mat-button [routerLink]="['application','new']">Nowe zgłoszenie</button>
 
