--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,13 +10,13 @@ body {
 }
 
 body {
-    --primary: #cc3333;
-    --primary-lighter: #f0c2c2;
-    --primary-darker: #b92020;
-    --accent: #9d9b9b;
-    --accent-lighter: #e2e1e1;
-    --accent-darker: #817f7f;
-    --warn: #f4ff00;
-    --warn-lighter: #fcffb3;
-    --warn-darker: #efff00;
+    --primary: #ff0056;
+    --primary-lighter: #ffb3cc;
+    --primary-darker: #ff003c;
+    --accent: #797979;
+    --accent-lighter: #d7d7d7;
+    --accent-darker: #5c5c5c;
+    --warn: #ff0000;
+    --warn-lighter: #ffb3b3;
+    --warn-darker: #ff0000;
 }
