--- a/src/app/cases/cases-list/cases-list.component.html
+++ b/src/app/cases/cases-list/cases-list.component.html
@@ -1,1 +1,52 @@
-<p>cases-list works!</p>
+  <!-- <table *ngIf="cases" mat-table [dataSource]="cases" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="Numer">
+      <th mat-header-cell *matHeaderCellDef> Numer </th>
+      <td mat-cell *matCellDef="let case"> {{case.case_number.value}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Temat">
+      <th mat-header-cell *matHeaderCellDef> Temat </th>
+      <td mat-cell *matCellDef="let case"> {{case.name.value}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Aplikacja">
+      <th mat-header-cell *matHeaderCellDef> Aplikacja </th>
+      <td mat-cell *matCellDef="let case"> {{case.account_name.value}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Status">
+      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <td mat-cell *matCellDef="let case"> {{case.status.value}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Ważnść">
+      <th mat-header-cell *matHeaderCellDef> Ważnść </th>
+      <td mat-cell *matCellDef="let case"> {{case.waznosc_c.value}} </td>
+    </ng-container>
+
+
+    <ng-container matColumnDef="Rodzaj">
+      <th mat-header-cell *matHeaderCellDef> Rodzaj </th>
+      <td mat-cell *matCellDef="let case"> {{case.Rodzaj.value}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Data wprowadzenia">
+      <th mat-header-cell *matHeaderCellDef> Data wprowadzenia </th>
+      <td mat-cell *matCellDef="let case"> {{case.Data_wprowadzenia.value}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Gwarantowany termin">
+      <th mat-header-cell *matHeaderCellDef> Gwarantowany termin </th>
+      <td mat-cell *matCellDef="let case"> {{case.Gwarantowany_termin.value}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Przydzielona do">
+      <th mat-header-cell *matHeaderCellDef> Przydzielona do </th>
+      <td mat-cell *matCellDef="let case"> {{case.Przydzielone_do.value}} </td>
+    </ng-container>
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table> -->
