implementig filtering panel

--- a/src/app/cases/cases-list/cases-list.component.html
+++ b/src/app/cases/cases-list/cases-list.component.html
@@ -1,3 +1,5 @@
+<app-filter-panel (onFilterValueChange)="filterCases($event)"></app-filter-panel>
+
 <div class="container">
   <table mat-table [dataSource]="cases" class="mat-elevation-z8">
 
