--- a/src/app/cases/case-comments/case-comments.component.html
+++ b/src/app/cases/case-comments/case-comments.component.html
@@ -1,20 +1,18 @@
-<div class="comments-box">
+<div class="comments-box" #commentBox>
 
   <div class="comment" *ngFor="let comment of comments">
-    <div class="info">
+    <div class="comment-info">
       <div class="name">{{comment.name}} </div>
       <div class="date">{{comment.date}}</div>
     </div>
-    <div class="content">
-      {{comment.content}}
-    </div>
+    <div class="comment-content" [innerHtml]="comment.content"></div>
   </div>
 
-  <mat-form-field class="new-comment-content">
-    <mat-label>napisz komentarz..</mat-label>
-    <textarea [formControl]='newcomment' matInput></textarea>
-  </mat-form-field>
+  <div class="new-comment-content">
+    <label for="comment">Napisz komentarz</label>
+    <div [froalaEditor] id="comment" [(froalaModel)]='newcomment'></div>
+  </div>
 
-  <button (click)='addComment()' mat-raised-button color="primary"> Dodaj komentarz</button>
+  <button (click)='addComment()' mat-raised-button color="primary">Dodaj komentarz</button>
 
 </div>
