--- a/src/app/cases/cases-form/cases-form.component.scss
+++ b/src/app/cases/cases-form/cases-form.component.scss
@@ -26,3 +26,11 @@ h1 {
     color: white;
     padding: 7px;
 }
+
+label{
+    margin-left: 5px;
+    margin-bottom: 5px;
+    font-weight: 500;
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.356);
+}
