--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,12 +18,12 @@ body {
 }
 
 body {
-    --primary: #ff0056;
-    --primary-lighter: #ffb3cc;
-    --primary-darker: #ff003c;
-    --accent: #797979;
-    --accent-lighter: #d7d7d7;
-    --accent-darker: #5c5c5c;
+    --primary: #bababa;
+    --primary-lighter: #eaeaea;
+    --primary-darker: #a3a3a3;
+    --accent: #c6395a;
+    --accent-lighter: #eec4ce;
+    --accent-darker: #b1243f;
     --warn: #ff0000;
     --warn-lighter: #ffb3b3;
     --warn-darker: #ff0000;
