--- a/src/app/cases/cases-form/cases-form.component.html
+++ b/src/app/cases/cases-form/cases-form.component.html
@@ -17,7 +17,7 @@
         </mat-select>
       </mat-form-field>
 
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" *ngIf="id">
         <mat-label>Stan</mat-label>
         <mat-select formControlName="state">
           <mat-option value="Open">Otwarty</mat-option>
@@ -47,7 +47,7 @@
         <input matInput type="text" value="SID" disabled=true>
       </mat-form-field>
 
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" *ngIf="id">
         <mat-label>Status</mat-label>
         <mat-select formControlName="status">
           <mat-option *ngFor="let state of states" [value]=state.key>{{state.value}}</mat-option>
@@ -74,17 +74,12 @@
     </mat-form-field>
 
     <label for="opis">Opis</label>
-    <div [froalaEditor] id="opis" formControlName="description"></div>
-    <!-- <mat-form-field>
-      <mat-label></mat-label>
-      <textarea formControlName="description" matInput cdkAutosizeMinRows="3" cdkTextareaAutosize
-        #autosize="cdkTextareaAutosize"></textarea>
-    </mat-form-field> -->
+    <angular-editor [config]="cfg" [placeholder]="'Wprowadź opis..'" formControlName="description"></angular-editor>
+
   </div>
 
 
-  <h1>Komentarze</h1>
-
+  <h1 *ngIf="id">Komentarze</h1>
   <app-case-comments *ngIf="id"></app-case-comments>
-
+  <button (click)="submit()" mat-raised-button color="primary">Zatwierdź</button>
 </form>
