--- a/src/app/cases/cases-form/cases-form.component.scss
+++ b/src/app/cases/cases-form/cases-form.component.scss
@@ -3,6 +3,7 @@ form {
     width: 70vw;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 30px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -27,10 +28,14 @@ h1 {
     padding: 7px;
 }
 
-label{
+label {
     margin-left: 5px;
     margin-bottom: 5px;
     font-weight: 500;
     font-size: 20px;
     color: rgba(0, 0, 0, 0.356);
+}
+
+angular-editor {
+    width: 100%;
 }
