--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,8 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.comment-content {
+.comment-content,
+.description-content {
     // width: 70vw;
 
     img {
